examples/test/testpolicy9190.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9190
  namespace: namespace50
spec:
  podSelector:
    matchLabels:
      key33: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value16
          key39: value47
          key2: value20
      podSelector:
        matchLabels:
          key33: value43
          key28: value3
          key48: value45
